--- a/index.html
+++ b/index.html
@@ -30,16 +30,30 @@
       </header>
 
       <form class="fact-form hidden">
-        <input type="text" placeholder="share a fact the world..." />
+        <input
+          type="text"
+          name="fact-text"
+          placeholder="Share a fact the world..."
+          maxlength="200"
+        />
         <span>200</span>
-        <input type="text" placeholder="Trustworthy source..." />
-        <select>
+        <input
+          type="text"
+          name="fact-source"
+          placeholder="Trustworthy source..."
+        />
+        <select name="fact-category">
           <option value="">Choose category:</option>
           <option value="technology">Technology</option>
-          <option value="scinece">Science</option>
+          <option value="science">Science</option>
           <option value="finance">Finance</option>
+          <option value="society">Society</option>
+          <option value="history">History</option>
+          <option value="entertainment">Entertainment</option>
+          <option value="health">Health</option>
+          <option value="news">News</option>
         </select>
-        <button class="btn btn-large">Post</button>
+        <button class="btn btn-large" type="submit">Post</button>
       </form>
 
       <main class="main">
@@ -113,6 +127,7 @@
         </section>
       </main>
     </div>
+    <script src="data.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
